--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,4 +6,20 @@ database:
   database_name: thing
 api:
   route_prefix: /api/v1.5
+  ip_switch: 10.59.0.0  # Not gonna show my secrets !
+
 oids:
+  systemName: 1.3.6.1.2.1.1.5
+  uptime: 1.3.6.1.2.1.1.3
+  cdp_neighbors:
+  interfaces:
+    description: 1.3.6.1.2.1.2.2.1.2
+    status: 1.3.6.1.2.1.2.2.1.8
+    speed: 1.3.6.1.2.1.2.2.1.5
+    vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
+    trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/notTrunking
+    mac_address: 1.3.6.1.2.1.2.2.1.6
+    sets:
+      vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
+  vlans:
+    name: 1.3.6.1.4.1.9.9.46.1.3.1.1.4.1
