--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,10 +17,12 @@ oids:
   cdp_neighbors:
   interfaces:
     description: 1.3.6.1.2.1.2.2.1.2
+    index: 1.3.6.1.2.1.2.2.1.1
     status: 1.3.6.1.2.1.2.2.1.8
     speed: 1.3.6.1.2.1.2.2.1.5
     vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
     trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/notTrunking
+    op_mode: 1.3.6.1.2.1.2.2.1.8
     mac_address: 1.3.6.1.2.1.2.2.1.6
     sets:
       vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
