--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,6 +15,10 @@ oids:
   systemName: 1.3.6.1.2.1.1.5
   uptime: 1.3.6.1.2.1.1.3
   cdp_neighbors:
+    ip: 1.3.6.1.4.1.9.9.23.1.2.1.1.4.15
+    fqdn: 1.3.6.1.4.1.9.9.23.1.2.1.1.6.15
+    interface: 1.3.6.1.4.1.9.9.23.1.2.1.1.7.15
+    model: 1.3.6.1.4.1.9.9.23.1.2.1.1.8.15
   interfaces:
     description: 1.3.6.1.2.1.2.2.1.2
     index: 1.3.6.1.2.1.2.2.1.1
