--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,9 +7,9 @@ database:
 api:
   route_prefix: /api/v1.5
 snmp:
-  host: 10.59.10.64
+  host: 10.59.68.2
   port: 161
-  community: public
+  community: sdn-test
 
 oids:
   systemName: 1.3.6.1.2.1.1.5
@@ -25,11 +25,12 @@ oids:
     status: 1.3.6.1.2.1.2.2.1.8
     speed: 1.3.6.1.2.1.2.2.1.5
     vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
-    trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/notTrunking
+    trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/access
     op_mode: 1.3.6.1.2.1.2.2.1.8
     mac_address: 1.3.6.1.2.1.2.2.1.6
     sets:
       vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
+      trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14
   vlans:
     name: 1.3.6.1.4.1.9.9.46.1.3.1.1.4.1
     dot1q_id: 1.3.6.1.4.1.9.9.46.1.3.1.1.6.1
