--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,9 +7,9 @@ database:
 api:
   route_prefix: /api/v1.5
 snmp:
-  host: 10.59.68.2
+  host: 10.59.10.64
   port: 161
-  community: sdn-test
+  community: public #sdn-test
 
 oids:
   systemName: 1.3.6.1.2.1.1.5
