--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,9 +7,9 @@ database:
 api:
   route_prefix: /api/v1.5
 snmp:
-  host: 10.59.68.2
+  host: 10.59.10.68
   port: 161
-  community: sdn-test
+  community: public
 
 oids:
   systemName: 1.3.6.1.2.1.1.5
@@ -20,17 +20,27 @@ oids:
     interface: 1.3.6.1.4.1.9.9.23.1.2.1.1.7.15
     model: 1.3.6.1.4.1.9.9.23.1.2.1.1.8.15
   interfaces:
-    description: 1.3.6.1.2.1.2.2.1.2
-    index: 1.3.6.1.2.1.2.2.1.1
-    status: 1.3.6.1.2.1.2.2.1.8
-    speed: 1.3.6.1.2.1.2.2.1.5
-    vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
-    trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/access
-    op_mode: 1.3.6.1.2.1.2.2.1.8
-    mac_address: 1.3.6.1.2.1.2.2.1.6
-    sets:
+    table: 1.3.6.1.2.1.2.2
+    oids:
+      description: 1.3.6.1.2.1.2.2.1.2
+      index: 1.3.6.1.2.1.2.2.1.1
+      status: 1.3.6.1.2.1.2.2.1.8
+      speed: 1.3.6.1.2.1.2.2.1.5
       vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
-      trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14
+      trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14 # trunking/access
+      operstatus: 1.3.6.1.2.1.2.2.1.8
+      mac_address: 1.3.6.1.2.1.2.2.1.6
+      sets:
+        vlan: 1.3.6.1.4.1.9.9.68.1.2.2.1.2
+        trunk_mode: 1.3.6.1.4.1.9.9.46.1.6.1.1.14
+    mib_names:
+      description: ifDescr
+      index: ifIndex
+      status: ifAdminStatus
+      speed: ifSpeed
+      operstatus: ifOperStatus
+      mac_address: ifPhysAddress
   vlans:
+    table: 1.3.6.1.4.1.9.9.46.1.3.1
     name: 1.3.6.1.4.1.9.9.46.1.3.1.1.4.1
     dot1q_id: 1.3.6.1.4.1.9.9.46.1.3.1.1.6.1
