--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,9 @@
 database:
-  host: 10.59.114.10
-  port: 8081
-  username: foo
-  password: bar
-  database_name: thing
+  host: 10.59.50.231
+  port: 27017
+  username: root
+  password: iutchalons
+  database_name: sdn-cloudstack
 api:
   route_prefix: /api/v1.5
 snmp:
@@ -15,10 +15,10 @@ oids:
   systemName: 1.3.6.1.2.1.1.5
   uptime: 1.3.6.1.2.1.1.3
   cdp_neighbors:
-    ip: 1.3.6.1.4.1.9.9.23.1.2.1.1.4.15
-    fqdn: 1.3.6.1.4.1.9.9.23.1.2.1.1.6.15
-    interface: 1.3.6.1.4.1.9.9.23.1.2.1.1.7.15
-    model: 1.3.6.1.4.1.9.9.23.1.2.1.1.8.15
+    ip: 1.3.6.1.4.1.9.9.23.1.2.1.1.4
+    fqdn: 1.3.6.1.4.1.9.9.23.1.2.1.1.6
+    interface: 1.3.6.1.4.1.9.9.23.1.2.1.1.7
+    model: 1.3.6.1.4.1.9.9.23.1.2.1.1.8
   interfaces:
     table: 1.3.6.1.2.1.2.2
     oids:
