--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: hugo_sdn_hugo
+    runs-on: sdn-api
     steps:
     - uses: actions/checkout@v2
     - name: Pulls the repo
