--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,8 @@ jobs:
       working-directory: /home/user/api_actions
     - name: Docker login
       env:
-        DOCKER_USER = ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD = ${{secrets.DOCKER_PASSWORD}}
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       working-directory: /home/user/api_actions
