--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,17 +13,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Pulls the repo
       run: git pull
-      working-directory: /home/user/api_actions
+      working-directory: /home/user/api_actions/sdn-cloudstack
     - name: Docker login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      working-directory: /home/user/api_actions
+      working-directory: /home/user/api_actions/sdn-cloudstack
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag alestrio/sdn-cloudstack:$(date +%s)
-      working-directory: /home/user/api_actions
+      working-directory: /home/user/api_actions/sdn-cloudstack
     - name: Docker push
       run: docker push ${{secrets.DOCKER_USER}}/sdn-cloudstack
-      working-directory: /home/user/api_actions
+      working-directory: /home/user/api_actions/sdn-cloudstack
