--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,8 +19,8 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       working-directory: /home/user/api_actions/sdn-cloudstack
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag alestrio/sdn-cloudstack:$(date +%s)
+      run: docker image build . --file Dockerfile --tag alestrio/sdn-cloudstack:$(date +%s)
       working-directory: /home/user/api_actions/sdn-cloudstack
     - name: Docker push
-      run: docker push ${{secrets.DOCKER_USER}}/sdn-cloudstack
+      run: docker image push ${{secrets.DOCKER_USER}}/sdn-cloudstack
       working-directory: /home/user/api_actions/sdn-cloudstack
