--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: sdn-api
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Docker login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
