--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Pulls the repo
+      run: git pull
     - name: Docker login
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
