--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ uvicorn~=0.15.0
 Beaker~=1.11.0
 pysmi~=0.3.4
 snmp_cmds~=1.0
+
+passlib~=1.7.4
+python-jose
+starlette~=0.16.0
+python-multipart~=0.0.5
+bcrypt~=3.2.0
