--- a/src/app/Dockerfile
+++ b/src/app/Dockerfile
@@ -6,5 +6,5 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python","./aplication_run.py"]
+ENTRYPOINT ["python","./application_run.py"]
 CMD ["no_config_specified"]
