--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -6,5 +6,5 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python","./api.py"]
+ENTRYPOINT ["python","./api_run.py"]
 CMD ["no_config_specified"]
