--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -8,5 +8,5 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python","./api_run.py"]
+#ENTRYPOINT ["python","./api_run.py"]
 CMD ["no_config_specified"]
