--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,12 +17,12 @@ jobs:
     - name: Build the Docker image for app
       run: docker image build . --file Dockerfile --tag europe-west1-docker.pkg.dev/sdn-cloudstack/alestrio/sdn-app:latest
       working-directory: /home/user/SDN-Cloudstack/SDN-Cloudstack/src/app
-    - name: Docker push
-      run: docker image push europe-west1-docker.pkg.dev/sdn-cloudstack/alestrio/sdn-cloudstack:latest
-      working-directory: /home/user/SDN-Cloudstack/SDN-Cloudstack
-    - name: Docker push
-      run: docker image push europe-west1-docker.pkg.dev/sdn-cloudstack/alestrio/sdn-app:latest
-      working-directory: /home/user/SDN-Cloudstack/SDN-Cloudstack/src/app
+    #- name: Docker push
+    #  run: docker image push europe-west1-docker.pkg.dev/sdn-cloudstack/alestrio/sdn-cloudstack:latest
+    #  working-directory: /home/user/SDN-Cloudstack/SDN-Cloudstack
+    #- name: Docker push
+    #  run: docker image push europe-west1-docker.pkg.dev/sdn-cloudstack/alestrio/sdn-app:latest
+    #  working-directory: /home/user/SDN-Cloudstack/SDN-Cloudstack/src/app
     - name: Docker stop
       run: docker-compose down
       working-directory: /home/user/compose/compose
